# medibot

./: .env.example  .gitignore  MediBot.pptx  README.md  promptfooconfig.yaml  pyproject.toml
.github/workflows/: ci.yml
deploy/hf_space/: README.md  app.py  requirements.txt
docs/: PRESENTATION.md
evals/: eval_set.yaml
notebooks/: 01_eda.ipynb  02_faiss_index.ipynb  03_agents_and_llm.ipynb
scripts/: build_index.py  chat.py  deploy_hf.py  promptfoo_provider.py  run_evals.py  ui.py
src/medibot/: app.py  data.py
src/medibot/agents/: __init__.py  description.py  diagnosis.py  precaution.py  schemas.py  severity.py
src/medibot/evaluation/: __init__.py  dataset.py  judge.py  metrics.py  runner.py
src/medibot/guardrails/: __init__.py  injection.py  input_guard.py  output_guard.py  phi.py  schemas.py
src/medibot/llm/: __init__.py  base.py  factory.py  gemini.py  hf_inference.py  ollama_client.py
src/medibot/memory/: __init__.py  manager.py
src/medibot/observability/: __init__.py  tracing.py
src/medibot/orchestrator/: __init__.py  prompts.py  react.py
src/medibot/rag/: embeddings.py  vector_store.py
src/medibot/ui/: gradio_app.py
tests/: test_agents.py  test_data.py  test_guardrails.py  test_orchestrator.py
